--- a/.htaccess
+++ b/.htaccess
@@ -1,15 +1,7 @@
 <IfModule mod_rewrite.c>
-    RewriteEngine On
-    RewriteBase /
-
-    # Evitar redireccio pels fitxers existents
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteCond %{REQUEST_FILENAME} !-d
-
-    # Redirigir totes les peticions HTML i PHP a /index.php
-    RewriteRule \.(html|php)$ /index.php [L]
-
-    # Redirigir totes les peticions a /index.php
-    RewriteRule ^ index.php [L]
+RewriteEngine on
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)$ /index.php?path=$1 [NC,L,QSA]
 
 </IfModule>
